--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.720.0",
+    "clean-css": "^4.1.11",
     "cookie-parser": "~1.4.4",
     "crypto-js": "^4.0.0",
     "debug": "~4.1.1",
